<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Клёв будет</string>
    <string name="app_name">Fishapp</string>
    <string name="weather_url">http://informer.gismeteo.ru/xml/33345_1.xml</string>
    <string name="smallw1">smallweather1</string>
    <string name="smallw2">smallweather2</string>
	<string name="smallw3">smallweather3</string>
    <string name="smallw4">smallweather4</string>
    <string name="fish_soup">Уха</string>
    <string name="fish_burger">Рыбные котлеты</string>
    <string name="goulash">Гуляш</string>
    <string name="moon_cicle_text">Фаза луны</string>
    <string name="weather_cicle_text">Погода на сегодня</string>
    <string name="fish1">Карась</string>
    <string name="fish2">Карп</string>
    <string name="fish3">Щука</string>
    <string name="fish4">Лещ</string>
    <string name="fish5">Сом</string>
    <string name="fish6">Судак</string>
    <string name="fish7">Язь</string>
    <string name="weather">Погода</string>
    <string name="calendar">Календарь</string>
    <string name="wiki">Инфо</string>
    <string name="cook_book">Рецепты</string>
    <string name="fish_for_the_day">Клев на сегодня</string>
    <string name="small_weather_description">Погода на ближайшие четыре дня</string>
    
    <string name="calendar_toast">Календарь рыбака доступен в платной версии.</string>
	<string name="about_summary">Android Calendar View Demo V0.5.0</string>
    <string name="about">About</string>
    <string name="pick_summary">start with ACTION_PICK</string>
    <string name="pick">Pick up a Date</string>
    <string name="show_summary">start with ACTION_VIEW</string>
    <string name="show">Show Calendar</string>
	<string name="hint">Hint: touch the first or last day of month to move to previous or next month.</string>    
</resources>