<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@android:color/white">
    
    <include layout="@layout/action_bar"/>
    <ScrollView 
        style="@style/weatherstyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollfish"
        android:fillViewport="true">
        <LinearLayout 
            android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
		    <Button 
		        style="@style/weatherstyle"
		        android:layout_margin="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/fish1"
		        android:id="@+id/recipebutton1"
		        android:textColor="#0ba3f9"
		        android:textStyle="bold"
		        android:textSize="15dp"
		        android:drawableTop="@drawable/karas_selector"
		        android:gravity="center_horizontal|center_vertical"
		        android:background="@android:color/white"
		        />
		    
		    <View 
		        android:layout_height="1dp"
		        android:layout_width="fill_parent"
		        android:background="@drawable/bg_gradient"
		        android:layout_gravity="center_horizontal"
		        />
		    <Button 
		        style="@style/weatherstyle"
		        android:layout_margin="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/fish2"
		        android:id="@+id/recipebutton2"
		        android:textColor="#0ba3f9"
		        android:textStyle="bold"
		        android:textSize="15dp"
		        android:drawableTop="@drawable/karp_selector"
		        android:gravity="center_horizontal|center_vertical"
		        android:background="@android:color/white"
		        />
		    
		    <View 
		        android:layout_height="1dp"
		        android:layout_width="fill_parent"
		        android:background="@drawable/bg_gradient"
		        android:layout_gravity="center_horizontal"
		        />
		    <Button 
		        style="@style/weatherstyle"
		        android:layout_margin="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/fish3"
		        android:id="@+id/recipebutton3"
		        android:textColor="#0ba3f9"
		        android:textStyle="bold"
		        android:textSize="15dp"
		        android:drawableTop="@drawable/shuka_selector"
		        android:gravity="center_horizontal|center_vertical"
		        android:background="@android:color/white"
		        />
		    
		    <View 
		        android:layout_height="1dp"
		        android:layout_width="fill_parent"
		        android:background="@drawable/bg_gradient"
		        android:layout_gravity="center_horizontal"
		        />
		    <Button 
		        style="@style/weatherstyle"
		        android:layout_margin="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/fish4"
		        android:id="@+id/recipebutton4"
		        android:textColor="#0ba3f9"
		        android:textStyle="bold"
		        android:textSize="15dp"
		        android:drawableTop="@drawable/lesh_selector"
		        android:gravity="center_horizontal|center_vertical"
		        android:background="@android:color/white"
		        />
		    
		    <View 
		        android:layout_height="1dp"
		        android:layout_width="fill_parent"
		        android:background="@drawable/bg_gradient"
		        android:layout_gravity="center_horizontal"
		        />
		    <Button 
		        style="@style/weatherstyle"
		        android:layout_height="wrap_content"
		        android:text="@string/fish5"
		        android:id="@+id/recipebutton5"
		        android:layout_margin="0dp"
		        android:textColor="#0ba3f9"
		        android:textStyle="bold"
		        android:textSize="15dp"
		        android:drawableTop="@drawable/som_selector"
		        android:gravity="center_horizontal|center_vertical"
		        android:maxLines="1"
		        android:background="@android:color/white"
		        />
		
		    <View 
		        android:layout_height="1dp"
		        android:layout_width="fill_parent"
		        android:background="@drawable/bg_gradient"
		        android:layout_gravity="center_horizontal"
		        />
		    
		    <Button 
		        style="@style/weatherstyle"
		        android:layout_height="wrap_content"
		        android:text="@string/fish6"
		        android:id="@+id/recipebutton6"
		        android:layout_margin="0dp"
		        android:textColor="#0ba3f9"
		        android:textStyle="bold"
		        android:textSize="15dp"
		        android:drawableTop="@drawable/sudak_selector"
		        android:gravity="center_horizontal|center_vertical"
		        android:background="@android:color/white"
		        />
		    
		    <View 
		        android:layout_height="1dp"
		        android:layout_width="fill_parent"
		        android:background="@drawable/bg_gradient"
		        android:layout_gravity="center_horizontal"
		        />
		    
		    <Button 
		        style="@style/weatherstyle"
		        android:layout_margin="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/fish7"
		        android:id="@+id/recipebutton7"
		        android:textColor="#0ba3f9"
		        android:textStyle="bold"
		        android:textSize="15dp"
		        android:drawableTop="@drawable/yaz_selector"
		        android:gravity="center_horizontal|center_vertical"
		        android:background="@android:color/white"
		        />
		    
		    <View 
		        android:layout_height="1dp"
		        android:layout_width="fill_parent"
		        android:background="@drawable/bg_gradient"
		        android:layout_gravity="center_horizontal"
		        />
    	</LinearLayout>
    </ScrollView>
</LinearLayout>